# agent-improvement-loop

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PROVENANCE.md  README.md  databricks.yml  pyproject.toml  run_plan.yaml
.github/workflows/: ci.yml
.polly/: registry.json
ail-self-optimizer/: .env.example  .prettierignore  README.md  app.yaml  appkit.plugins.json  databricks.yml  eslint.config.js  package-lock.json  package.json  playwright.config.ts
ail-self-optimizer/client/: index.html  vite.config.ts
ail-self-optimizer/client/public/: site.webmanifest
ail-self-optimizer/client/src/: App.tsx  ErrorBoundary.tsx  index.css
ail-self-optimizer/config/queries/: agent_versions.sql  agents.sql  by_model.sql  by_producer.sql  corpus_summary.sql  high_token_sessions.sql  live_trace_summary.sql  prompt_lineage.sql  proposed_actions.sql  recent_activity.sql  session_token_bars.sql  tool_waste_files.sql  tool_waste_shell.sql  version_comparisons.sql  version_metric_deltas.sql
ail-self-optimizer/server/: gepa-output.test.ts  gepa-output.ts  graceful-shutdown.test.ts  graceful-shutdown.ts  runtime-config.test.ts  runtime-config.ts  server.ts
ail-self-optimizer/shared/appkit-types/: analytics.d.ts
ail-self-optimizer/tests/: smoke.spec.ts
artifacts/: example1_diagnosis.json  example1_diagnosis.md  l0_baseline_660599403165942.json  l3_halo_review_demo_proof.json  l3_halo_review_demo_verdict.json  phase2_token_lever.json
config/: agents.yaml
docs/: ADVISORY_MEMORY.md  ARCHITECTURE.md  ASSET_GENERATOR.md  AUTO_ALIGN.md  COHORTS.md  COMPANION.md  CONNECT_CODEX.md  CONNECT_YOUR_AGENT.md  DEPLOY.md  EXECUTOR.md  GEPA_OPTIMIZATION.md  GETTING_STARTED.md  HANDOFF_2026-07-15.md  JUDGE_AUTHORING.md  L0_METRICS_CONTRACT.md  L2_JUDGES_CONTRACT.md  LABELING_UI.md  LOCAL_RUNNER.md  LOOP_CONTROLLER.md  MEMALIGN_ROLLBACK.md  MILESTONE-1.md  OBSERVABILITY_APP.md  ONBOARDING_WIZARD.md  PHASE2_FIXTURE_SPEC.md  PHASE2_LIVE_HARNESS.md  PRODUCT_ARCHITECTURE.md  PROJECT_STATE.md  PROMPT_REGISTRY.md  QUICK_CONNECT.md  READINESS_AND_TRUST.md  RECOMMENDATION_MEMORY.md  RLM_REVIEW.md  VERSIONING.md
eval/phase2_fixtures/example-token-task/: README.md
eval/phase2_fixtures/ts-config-04/: README.md
eval/phase2_fixtures/ts-fix-01/: README.md
eval/phase2_fixtures/ts-impl-02/: README.md
eval/phase2_fixtures/ts-refactor-03/: README.md
eval/phase2_fixtures/ts-route-05/: README.md
eval/task_suite/phase2-mini/: README.md  tasks.yaml
eval/task_suite/v1/: README.md  tasks.yaml
resources/: apply_service.job.yml  auto_align.job.yml  continuous_rlm.job.yml  gepa.job.yml  judge_backfill.job.yml  l0_publish.job.yml  memory_distiller.job.yml  onboarding_service.job.yml  optimization_cycle.job.yml  recommendation_planner.job.yml  recovery_sweep.job.yml
scripts/: demo_memalign_rollback.py  migrate_claude_code_experiment.py  run_agent_executor.py  run_companion_planner.py  run_gepa_optimization.py  run_local_cycle.py  run_memory_spike.py  run_phase2_comparison.py
src/ail/: __init__.py  cli.py  cohorts.py  events.py  pools.py  publish.py  publish_lineage.py  publish_versions.py  registry.py  sdk.py  trace_policy.py  workspace_config.py  workspace_guards.py
src/ail/companion/: __init__.py  __main__.py  bootstrap.py  cli.py
src/ail/compare/: __init__.py  contract.py  harness.py  monitoring.py
src/ail/executor/: __init__.py  executor.py  gepa_apply.py
src/ail/goals/: __init__.py  allowlist.py  compiler.py
src/ail/groundtruth/: __init__.py  approve.py  capture.py  execute.py  promote.py  schema.py  store.py
src/ail/ingest/: __init__.py  base.py  mlflow_source.py
src/ail/jobs/: __init__.py  agent_executor.py  apply_job.py  author_judge.py  auto_align_job.py  bootstrap_grants.py  bootstrap_tables.py  companion_planner.py  continuous_rlm.py  gepa_job.py  judge_backfill.py  local_cycle.py  memory_distiller.py  multi_agent.py  onboarding_job.py  optimization_cycle.py  publish_job.py  readiness_preflight.py  recommendation_planner.py  register_scorers_job.py  revert_champion.py  rlm_trigger.py  suite_freeze.py  suite_scaffold.py  validate_run_as.py
src/ail/judges/: __init__.py  agreement.py  alignment.py  authoring.py  auto_align.py  backfill.py  contract.py  labeling.py  pools.py  registration.py  scorers.py
src/ail/l3/: __init__.py  adapter.py  cohort_review.py  continuous.py  contract.py  goal_rubric.py  parser.py  reviewer.py  rubric.py  selection.py
src/ail/labeling/: __init__.py  service.py
src/ail/loop/: __init__.py  apply.py  apply_service.py  candidate_builders.py  controller.py  decision_rules.py  evidence_cycle.py  planner.py  proposals.py  publish_proposals.py  verify_service.py
src/ail/memory/: __init__.py  assessments.py  config.py  distiller.py  intervention.py  provenance.py  schema.py  source.py  watermark.py  writeback.py
src/ail/metrics/: __init__.py  cohort.py  contract.py  l0_deterministic.py  mlflow_scorers.py  report.py
src/ail/onboarding/: __init__.py  experiment.py  goals.py  service.py
src/ail/optimize/: __init__.py  fixtures.py  gepa_runner.py  lever.py  (+2 more)
tests/: conftest.py  test_agent_executor.py  test_apply_engine.py  test_apply_job.py  test_apply_service.py  test_auto_align_job.py  test_base.py  test_bootstrap_grants.py  test_bootstrap_tables.py  test_candidate_builders.py  test_claude_code_adapter.py  test_codex_adapter.py  test_cohort_ingest.py  test_cohorts.py  test_companion_bootstrap.py  test_companion_entrypoint.py  test_companion_planner.py  test_compare.py  test_continuous_rlm_job.py  test_decision_rules.py  test_demo_memalign_rollback.py  test_events.py  test_evidence_cycle.py  test_executor.py  test_gepa_companion_routing.py  test_gepa_job.py  test_gepa_local_apply.py  test_gepa_runner.py  test_goals.py  test_groundtruth_mlflow.py  test_groundtruth_pipeline.py  test_groundtruth_schema.py  test_judge_backfill.py  test_judges.py  test_judges_authoring.py  test_judges_auto_align.py  test_judges_labeling.py  test_judges_registration.py  test_l0_metrics.py  test_l3_adapter.py  (+54 more)
tests/fixtures/: rlm_batch_report_sample.json  synthetic_trace.json
(+141 files in other folders)
