[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ail"
version = "0.0.0"
description = "A reusable, agent-agnostic self-improvement loop for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mlflow>=3.14,<4",
    "databricks-sdk>=0.20",
    # The L0 metrics output contract is a typed, stable, JSON-serializable schema
    # a downstream UI reads. pydantic v2 is the contract surface (already an
    # mlflow transitive dep; pinned here to make the dependency explicit).
    "pydantic>=2.0",
    # The frozen Task Suite artifact (eval/task_suite/<v>/tasks.yaml) is loaded
    # and written via PyYAML. Already an mlflow transitive dep; pinned here to
    # make the direct dependency explicit (ail.task_suite.loader imports yaml).
    "pyyaml>=6.0",
]

[project.scripts]
# Wheel-task entrypoint for the scheduled Tier A publish Job (see databricks.yml).
ail-publish-job = "ail.jobs.publish_job:main"
# Wheel-task entrypoint for the app's Approve/Reject write-path on the deployed
# (Node-only) image: triggered as a Job (resources/apply_service.job.yml), reads the
# decision from job named parameters, runs the SAME ail.loop.apply_service engine,
# and writes the real result to agent_apply_results for the app bridge to read back.
ail-apply-job = "ail.jobs.apply_job:main"
# One-time, idempotent post-deploy bootstrap: provide-or-create the framework SQL
# warehouse, grant CAN_USE to the single framework SP, and tag the experiment with
# the monitoring warehouse. Run as a workspace admin (see docs/DEPLOY.md).
ail-bootstrap-grants = "ail.jobs.bootstrap_grants:main"
# Onboarding preflight: `ail-readiness <experiment_id>` prints, per data gate, how
# far the experiment is from each readiness unlock. Reuses ail.readiness; prints no
# fabricated "ready" and exits non-zero only on trace-store access failure.
ail-readiness = "ail.jobs.readiness_preflight:main"
# Guarded champion revert: `ail-revert <agent> --to-version <n>` re-points a prompt's
# champion alias to a prior version. Fail-closed, dry-run by default (--yes to write);
# prints the WAS->BECOMES audit. Re-run the lineage publish after (see docs).
ail-revert = "ail.jobs.revert_champion:main"
# Manually-runnable + in-cycle-reused L3/RLM reviewer: a bounded runner that
# idempotently attaches rlm_* feedback only to sampled traces without RLM
# assessments. The standalone trace-table-update trigger Job was retired (the
# trace store is a VIEW, not a Delta table, so table_update is infeasible); this
# reviewer now runs INSIDE the scheduled optimization cycle (ail-optimization-cycle)
# and remains available to run by hand.
ail-continuous-rlm = "ail.jobs.continuous_rlm:main"
# Unified, scheduled optimization cycle: one cadence over one sampled trace set —
# in-cycle RLM review, then the layered A+B loop controller (deterministic rules +
# the LLM-agent planner), then PENDING-proposal publish. Propose-only; applies
# nothing (a human approves the apply in the app, lane 3).
ail-optimization-cycle = "ail.jobs.optimization_cycle:main"

[project.optional-dependencies]
# The Claude Code adapter drives the Claude Agent SDK. Optional so the ingest
# seam + MLflow source install without pulling an agent runtime.
claude = ["claude-agent-sdk>=0.1.39"]
# Scheduled-scorer registration (src/ail/judges/registration.py) calls the
# public mlflow.genai.scorers API, but that delegates to databricks-agents for a
# Databricks backend. Optional + lazy so the core library (ingest, L0 metrics,
# ground truth, judge construction) installs without this heavy dependency
# (boto3/tiktoken/...); only operators registering scorers need it.
agents = ["databricks-agents>=1.11,<2"]
# L3 recursive trace reviewer (src/ail/l3/) ADOPTS HALO (context-labs/halo, MIT)
# as a dependency — the trace-specialized Recursive LM that reviews arbitrarily
# large traces (this corpus reaches 943K tokens) without exceeding any single
# judge call's context. Optional + lazy-imported so core + CI stay lean and
# importable without it (HALO pulls openai-agents, a pinned deno binary,
# pandas/numpy); only L3 review needs it. HALO is a DEPENDENCY, never vendored —
# see PROVENANCE.md / NOTICE.
l3 = ["halo-engine>=0.1.26,<0.2"]
# MemAlign judge alignment (src/ail/judges/alignment.py) drives MLflow's
# MemAlignOptimizer, which requires the dspy optimizer backend ("DSPy library is
# required but not installed" without it). Optional + lazy-imported (inside
# build_memalign_optimizer) so the core library + base (unaligned) judges install
# and CI run without dspy; only the judge-alignment cadence needs it. Lower bound
# is the version verified end-to-end (import + build_memalign_optimizer); <4 caps
# the major to guard against a future dspy API break under MLflow's MemAlign.
align = ["dspy>=3.2.1,<4"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: tests that hit a live Databricks/MLflow workspace (deselected by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Live Phase-2 fixtures hold a starting repo state an agent edits (often
# deliberately incomplete/broken seed code) plus pristine verify checks — they are
# test data, not project source, so they are not linted or formatted.
extend-exclude = ["eval/phase2_fixtures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]

[tool.mypy]
python_version = "3.11"
packages = ["ail"]
mypy_path = "src"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

# Upstream/runtime deps ship without usable type information. ``follow_imports
# = skip`` keeps mypy from descending into them (and into their transitive deps
# such as numpy, whose stubs use 3.12-only syntax).
[[tool.mypy.overrides]]
# ``engine.*`` is HALO (the optional ``l3`` extra); ``agents.*`` is the OpenAI
# Agents SDK it pulls in — neither is installed in CI (core install only), so
# their imports (lazy, inside the reviewer) must not fail the typecheck.
# ``gepa.*`` is the GEPA optimizer (ships with the ``align`` extra via dspy);
# only the GEPA loop's lazy ``gepa.optimize`` resolver imports it.
module = ["mlflow.*", "databricks.*", "claude_agent_sdk.*", "engine.*", "agents.*", "yaml", "gepa.*"]
ignore_missing_imports = true
follow_imports = "skip"
