[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ail"
version = "0.0.0"
description = "A reusable, agent-agnostic self-improvement loop for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mlflow>=3.14,<4",
    "databricks-sdk>=0.20",
    # The L0 metrics output contract is a typed, stable, JSON-serializable schema
    # a downstream UI reads. pydantic v2 is the contract surface (already an
    # mlflow transitive dep; pinned here to make the dependency explicit).
    "pydantic>=2.0",
    # The frozen Task Suite artifact (eval/task_suite/<v>/tasks.yaml) is loaded
    # and written via PyYAML. Already an mlflow transitive dep; pinned here to
    # make the direct dependency explicit (ail.task_suite.loader imports yaml).
    "pyyaml>=6.0",
]

[project.scripts]
# Wheel-task entrypoint for the scheduled Tier A publish Job (see databricks.yml).
ail-publish-job = "ail.jobs.publish_job:main"
# Wheel-task entrypoint for the app's Approve/Reject write-path on the deployed
# (Node-only) image: triggered as a Job (resources/apply_service.job.yml), reads the
# decision from job named parameters, runs the SAME ail.loop.apply_service engine,
# and writes the real result to agent_apply_results for the app bridge to read back.
ail-apply-job = "ail.jobs.apply_job:main"
# One-time, idempotent post-deploy bootstrap: provide-or-create the framework SQL
# warehouse, grant CAN_USE to the single framework SP, and tag the experiment with
# the monitoring warehouse. Run as a workspace admin (see docs/DEPLOY.md).
ail-bootstrap-grants = "ail.jobs.bootstrap_grants:main"
# Onboarding preflight: `ail-readiness <experiment_id>` prints, per data gate, how
# far the experiment is from each readiness unlock. Reuses ail.readiness; prints no
# fabricated "ready" and exits non-zero only on trace-store access failure.
ail-readiness = "ail.jobs.readiness_preflight:main"
# Guarded champion revert: `ail-revert <agent> --to-version <n>` re-points a prompt's
# champion alias to a prior version. Fail-closed, dry-run by default (--yes to write);
# prints the WAS->BECOMES audit. Re-run the lineage publish after (see docs).
ail-revert = "ail.jobs.revert_champion:main"
# Judge authoring: `ail-author-judge <name> --description "..."` turns a natural-language
# quality dimension into a registered, MemAlign-alignable {{ trace }} judge plus the
# name-matched label schema. Reuses ail.judges.authoring; --no-register to preview.
ail-author-judge = "ail.jobs.author_judge:main"
# Register the built-in scheduled scorers against an explicit experiment. Thin CLI
# over ail.judges.registration.register_scorers; no experiment/workspace default.
ail-register-scorers = "ail.jobs.register_scorers_job:main"
# Suite builder (L8), draft half: `ail-suite-scaffold --experiment <id>` drafts YOUR OWN
# Task Suite from YOUR OWN traces — stratifies by L0 (token/tool-call distribution), derives
# a prompt per representative trace, and writes an UNFROZEN draft plus a companion checks.yaml
# of placeholders a human must author. Reuses ail.task_suite + ail.ingest + ail.metrics.
# NEVER fabricates a success check; NEVER freezes (short read-only trace read, takes --profile).
ail-suite-scaffold = "ail.jobs.suite_scaffold:main"
# Suite builder (L8), freeze half: `ail-suite-freeze <tasks.yaml>` seals a drafted suite.
# FAIL-CLOSED — refuses (non-zero, names the tasks, freezes nothing) if any success check in
# checks.yaml is still empty or the scaffold placeholder, forcing human authoring. Otherwise
# freezes via the existing TaskSuite.freeze()+save and confirms the sealed artifact reloads
# with a passing integrity check.
ail-suite-freeze = "ail.jobs.suite_freeze:main"
# Standalone SCHEDULED L3/RLM deep-reviewer (resources/continuous_rlm.job.yml): a
# bounded runner that idempotently attaches rlm_* feedback only to sampled traces
# without RLM assessments, on the most powerful viable judge (databricks-gpt-5-5-pro)
# and steered by the user's goal. It is SCHEDULED, not trace-arrival-triggered (the
# trace store is a VIEW, so table_update is infeasible).
ail-continuous-rlm = "ail.jobs.continuous_rlm:main"
# Local companion planner (EVIDENCE-FIRST, no proving): the deployer-run planner lane
# (docs/PRODUCT_ARCHITECTURE.md §4/§7). Reads an agent's judge/RLM/L0 evidence, plans
# (Lane A rules + the LLM Lane-B planner), gates on readiness + judge trust ONLY (no
# frozen-suite prover, no ProofSummary), and publishes PENDING evidence-backed proposals
# to agent_proposed_actions. Proving is opt-in Tier-2, run later on the user's frozen
# suite; this proves nothing and applies nothing. Requires a STATIC DATABRICKS_TOKEN
# pinned to the experiment's workspace host (a --profile OAuth login is refused — its
# mid-run refresh cannot persist from a long-running local process).
ail-companion-planner = "ail.jobs.companion_planner:main"
# Scheduled auto-align trigger: per judged dimension, align the judge with MemAlign
# once enough human labels exist, re-align as more accrue, guard trust with the
# agreement floor, and roll back a regression. Turns "a human adds labels" into
# "the judge becomes trusted automatically". Reuses ail.judges.auto_align.
ail-auto-align = "ail.jobs.auto_align_job:main"
# Local companion executor (L7b-2, the open-ended AGENT_TASK executor). Deployer-run
# (Claude Agent SDK compute, not serverless): previews PENDING AGENT_TASK proposals by
# running a sandboxed agent against a COPY of the agent's target_workspace (recording the
# real diff + an L6 snapshot for review), and commits APPROVED ones to the live workspace
# by applying the STORED, approved change-set (snapshot-live-first, then apply, then
# record) — it never re-runs the agent at commit. Databricks-native (no git). Requires a
# STATIC DATABRICKS_TOKEN pinned to the workspace host (a --profile OAuth login is refused).
ail-agent-executor = "ail.jobs.agent_executor:main"
# One-command, durable companion bootstrap: collapses (mint static token) + (export
# DATABRICKS_HOST/TOKEN, AIL_CATALOG/SCHEMA) + (`python -m ail.companion poll ...`) into a
# single supervised loop. Per cycle it mints a FRESH static token from --profile, exports
# it, and runs one poll pass — re-minting keeps a long run alive past OAuth token expiry.
# --profile is used only to mint; it is never passed to the companion (which refuses OAuth).
# Fail-closed: a failed mint exits non-zero and never runs the companion unauthenticated.
ail-companion-start = "ail.companion.bootstrap:main"

[project.optional-dependencies]
# The Claude Code adapter drives the Claude Agent SDK. Optional so the ingest
# seam + MLflow source install without pulling an agent runtime.
claude = ["claude-agent-sdk>=0.1.39"]
# Scheduled-scorer registration (src/ail/judges/registration.py) calls the
# public mlflow.genai.scorers API, but that delegates to databricks-agents for a
# Databricks backend. Optional + lazy so the core library (ingest, L0 metrics,
# ground truth, judge construction) installs without this heavy dependency
# (boto3/tiktoken/...); only operators registering scorers need it.
agents = ["databricks-agents>=1.11,<2"]
# L3 recursive trace reviewer (src/ail/l3/) ADOPTS HALO (context-labs/halo, MIT)
# as a dependency — the trace-specialized Recursive LM that reviews arbitrarily
# large traces (this corpus reaches 943K tokens) without exceeding any single
# judge call's context. Optional + lazy-imported so core + CI stay lean and
# importable without it (HALO pulls openai-agents, a pinned deno binary,
# pandas/numpy); only L3 review needs it. HALO is a DEPENDENCY, never vendored —
# see PROVENANCE.md / NOTICE.
l3 = ["halo-engine>=0.1.26,<0.2"]
# MemAlign judge alignment (src/ail/judges/alignment.py) drives MLflow's
# MemAlignOptimizer, which requires the dspy optimizer backend ("DSPy library is
# required but not installed" without it). Optional + lazy-imported (inside
# build_memalign_optimizer) so the core library + base (unaligned) judges install
# and CI run without dspy; only the judge-alignment cadence needs it. Lower bound
# is the version verified end-to-end (import + build_memalign_optimizer); <4 caps
# the major to guard against a future dspy API break under MLflow's MemAlign.
align = ["dspy>=3.2.1,<4"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: tests that hit a live Databricks/MLflow workspace (deselected by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Live Phase-2 fixtures hold a starting repo state an agent edits (often
# deliberately incomplete/broken seed code) plus pristine verify checks — they are
# test data, not project source, so they are not linted or formatted.
extend-exclude = ["eval/phase2_fixtures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]

[tool.mypy]
python_version = "3.11"
packages = ["ail"]
mypy_path = "src"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

# Upstream/runtime deps ship without usable type information. ``follow_imports
# = skip`` keeps mypy from descending into them (and into their transitive deps
# such as numpy, whose stubs use 3.12-only syntax).
[[tool.mypy.overrides]]
# ``engine.*`` is HALO (the optional ``l3`` extra); ``agents.*`` is the OpenAI
# Agents SDK it pulls in — neither is installed in CI (core install only), so
# their imports (lazy, inside the reviewer) must not fail the typecheck.
# ``gepa.*`` is the GEPA optimizer (ships with the ``align`` extra via dspy);
# only the GEPA loop's lazy ``gepa.optimize`` resolver imports it.
module = ["mlflow.*", "databricks.*", "claude_agent_sdk.*", "engine.*", "agents.*", "yaml", "gepa.*"]
ignore_missing_imports = true
follow_imports = "skip"
